# holitechclubbot

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
nginx/: nginx.bot.conf
src/bot/: functions.py  helpers.py  keyboards.py  misc.py  tasks.py  urls.py  views.py
src/bot/data/: states.py
src/bot/middleware/: error_handler.py
src/bot/routers/: main.py
src/config/: celery.py  settings.py  urls.py
src/core/: tasks.py
src/core/queue/: scheduler.py
src/core/utils/: constants.py
src/order/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
src/order/click_up/typing/request/: shop_api.py
src/order/methods/: cancel_transaction.py  check_perform_transaction.py  check_transaction.py  create_transaction.py  perform_transaction.py
src/order/migrations/: 0001_initial.py  0002_alter_order_status_alter_transaction_cancel_time_and_more.py  0003_userjoinchannel.py  0004_alter_transaction_payment_method_and_more.py  0005_alter_transaction_payment_method.py  0006_order_payment_id.py  0007_alter_transaction_payment_method.py  0008_alter_privatechannel_private_channel_id_and_more.py
src/users/: admin.py  models.py
src/users/migrations/: 0001_initial.py  0002_user_language.py  0003_user_is_joined_channel.py  0004_remove_user_is_joined_channel.py  0005_user_agreed_to_terms_user_is_auto_subscribe_and_more.py  0006_user_is_foreigner.py
